# awkernel

./: AGENTS.md  Cargo.toml  Makefile
applications/awkernel_shell/: Cargo.toml
applications/awkernel_shell/src/: lib.rs
applications/tests/test_network/src/: lib.rs
applications/trace/minimal/: Cargo.toml
applications/trace/minimal/src/: lib.rs
awkernel_async_lib/: Cargo.toml
awkernel_async_lib/src/: baseline_trace.rs  join_handle.rs  lib.rs  periodic_task.rs  scheduler.rs  sleep_task.rs  task.rs  timeout_call.rs
awkernel_async_lib/src/net/: tcp.rs  udp.rs
awkernel_async_lib/src/scheduler/: gedf.rs  panicked.rs  prioritized_fifo.rs  prioritized_rr.rs
awkernel_drivers/src/: pcie.rs
awkernel_drivers/src/pcie/intel/: igc.rs
awkernel_drivers/src/pcie/intel/igc/: i225.rs  igc_base.rs  igc_defines.rs  igc_phy.rs  igc_regs.rs
awkernel_lib/src/: net.rs  priority_queue.rs
awkernel_lib/src/arch/: x86_64.rs
awkernel_lib/src/arch/x86_64/: power.rs
awkernel_lib/src/net/: if_net.rs  net_device.rs
fixtures/baseline_trace/: faithful_2cpu.txt
fixtures/handoff_trace/: faithful_2cpu.txt  faithful_2cpu_rocq.v  faithful_2cpu_rows.tsv
fixtures/workload_trace/multi_async/: baseline.txt  candidate_table.v  lifecycle.tsv  rocq.v  rows.tsv
fixtures/workload_trace/nested_spawn/: baseline.txt  candidate_table.v  lifecycle.tsv  rocq.v  rows.tsv
fixtures/workload_trace/single_async/: baseline.txt  candidate_table.v  lifecycle.tsv  rocq.v  rows.tsv
fixtures/workload_trace/sleep_wakeup/: baseline.txt  candidate_table.v  lifecycle.tsv  rocq.v  rows.tsv
kernel/: Cargo.toml
kernel/src/: main.rs
kernel/src/arch/x86_64/: kernel_main.rs
scripts/: check_baseline_trace.py  check_generic_random_workload_seeds.py  check_handoff_acceptance.py  check_workload_acceptance.py  generate_workload_candidate_table.py  stage_workload_generated_modules.py
scripts/haskell/: HandoffAcceptanceMain.hs  WorkloadAcceptanceMain.hs  WorkloadCandidateTableMain.hs
tests/: test_workload_acceptance_contract.py
tools/sched-witness-gen/: Cargo.toml
tools/sched-witness-gen/src/: main.rs
userland/: Cargo.toml
userland/src/: lib.rs  workload_trace.rs
