# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "kernel",
    "userland",
    "x86bootdisk",
    "awkernel_async_lib",
    "awkernel_async_lib_verified",
    "awkernel_lib",
    "awkernel_aarch64",
    "awkernel_drivers",
    "applications/awkernel_services",
    "applications/awkernel_shell",
    "applications/awkernel_display",
    "applications/rd_gen_to_dags",
    "applications/trace/minimal",
    "applications/tests/*",
    "smoltcp",
    "awkernel_futures_macro",
]

resolver = "2"
