[package]
name = "awkernel_async_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "1"
log = "0.4"
array-macro = "2.1"
fixedbitset = "0.5.7"
async-trait = "0.1"
async-recursion = "1.1"

[dependencies.futures]
version = "0.3"
default-features = false
features = ["alloc", "async-await"]

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["alloc", "async-await", "async-await-macro"]

[dependencies.awkernel_lib]
path = "../awkernel_lib"
default-features = false

[dependencies.awkernel_async_lib_verified]
path = "../awkernel_async_lib_verified"

[dependencies.awkernel_futures_macro]
path = "../awkernel_futures_macro"

[dependencies.smoltcp]
path = "../smoltcp"
default-features = false
features = ["awkernel"]

[features]
default = []
std = ["awkernel_lib/std", "no_preempt"]
no_preempt = []
spinlock = ["awkernel_lib/spinlock"]
clippy = []
perf = []
baseline_trace = []
baseline_trace_vm = ["baseline_trace"]
