[package]
name = "userland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

[dependencies.awkernel_async_lib]
path = "../awkernel_async_lib"

[dependencies.awkernel_services]
path = "../applications/awkernel_services"

[dependencies.rd_gen_to_dags]
path = "../applications/rd_gen_to_dags"
optional = true

[dependencies.test_pubsub]
path = "../applications/tests/test_pubsub"
optional = true

[dependencies.test_network]
path = "../applications/tests/test_network"
optional = true

[dependencies.test_rpi_hal]
path = "../applications/tests/test_rpi_hal"
optional = true

[dependencies.test_graphics]
path = "../applications/tests/test_graphics"
optional = true

[dependencies.test_prioritized_fifo]
path = "../applications/tests/test_prioritized_fifo"
optional = true

[dependencies.test_multi_prioritized_scheduler]
path = "../applications/tests/test_multi_prioritized_scheduler"
optional = true

[dependencies.test_prioritized_rr]
path = "../applications/tests/test_prioritized_rr"
optional = true

[dependencies.test_async_mutex]
path = "../applications/tests/test_async_mutex"
optional = true

[dependencies.test_gedf]
path = "../applications/tests/test_gedf"
optional = true

[dependencies.test_measure_channel]
path = "../applications/tests/test_measure_channel"
optional = true

[dependencies.test_measure_channel_heavy]
path = "../applications/tests/test_measure_channel_heavy"
optional = true

[dependencies.test_dag]
path = "../applications/tests/test_dag"
optional = true

[dependencies.test_dvfs]
path = "../applications/tests/test_dvfs"
optional = true

[dependencies.test_voluntary_preemption]
path = "../applications/tests/test_voluntary_preemption"
optional = true

[features]
default = []
perf = ["awkernel_services/perf"]
baseline_trace_vm = [
    "awkernel_async_lib/baseline_trace",
    "awkernel_async_lib/baseline_trace_vm",
]
handoff_trace_vm = [
    "awkernel_async_lib/baseline_trace",
    "awkernel_async_lib/handoff_trace_vm",
]

# Evaluation applications
rd_gen_to_dags = ["dep:rd_gen_to_dags"]

# Test applications
test_network = ["dep:test_network"]
test_pubsub = ["dep:test_pubsub"]
test_rpi_hal = ["dep:test_rpi_hal"]
test_graphics = ["dep:test_graphics"]
test_prioritized_fifo = ["dep:test_prioritized_fifo"]
test_prioritized_rr = ["dep:test_prioritized_rr"]
test_async_mutex = ["dep:test_async_mutex"]
test_gedf = ["dep:test_gedf"]
test_measure_channel = ["dep:test_measure_channel"]
test_measure_channel_heavy = ["dep:test_measure_channel_heavy"]
test_dag = ["dep:test_dag"]
test_voluntary_preemption = ["dep:test_voluntary_preemption"]
