[package]
name = "awkernel_shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blisp = "0.4"
log = "0.4"
byteorder = { version = "1.0", default-features = false }
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }

[dependencies.awkernel_async_lib]
path = "../../awkernel_async_lib"
default-features = false

[dependencies.awkernel_lib]
path = "../../awkernel_lib"
default-features = false

[features]
perf = []
