[package]
name = "trace_minimal"
version = "0.1.0"
edition = "2021"

[dependencies.awkernel_async_lib]
path = "../../../awkernel_async_lib"
default-features = false

[features]
default = []
single_async_trace_vm = []
nested_spawn_trace_vm = []
multi_async_trace_vm = []
sleep_wakeup_trace_vm = []
generic_trace_vm = []
periodic_trace_vm = []
